// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table roles {
  id integer [primary key]
  name string
  created_at timestamp
  updated_at timestamp
}

Table users {
  id integer [primary key]
  firstName varchar
  lastname varchar
  email varchar
  password varchar
  role_id integer
  created_at timestamp
  updated_at timestamp
}

Table companies {
  id integer [primary key]
  name varchar
  slug varchar
  created_at timestamp
  updated_at timestamp
}

Table employee_roles {
  id integer [primary key]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table employees {
  id integer [primary key]
  company_id integer
  user_id integer
  employee_role_id integer
  created_at timestamp
  updated_at timestamp
}

Table firewall_types {
  id integer [primary key]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table firewalls {
  id integer [primary key]
  name varchar
  company_id integer
  firewall_types_id integer
  created_at timestamp
  updated_at timestamp
}

Table tokens {
  id integer [primary key]
  token varchar
  user_id integer
  is_used boolean
  expires_at timestamp
  created_at timestamp
  updated_at timestamp
}

Ref: roles.id > users.role_id
Ref: employees.user_id - users.id
Ref: employees.company_id - companies.id
Ref: employees.employee_role_id < employee_roles.id
Ref: firewalls.firewall_types_id < firewall_types.id
Ref: firewalls.company_id < companies.id
Ref: users.id > tokens.user_id 

